// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render breadcrumb with empty model 1`] = `
<div>
  <div
    class=""
    data-sfhasquickeditoperation="true"
    data-sfid="dbd6fe0e-eaea-426a-bab6-8689ea755a39"
    data-sfiscontentwidget="true"
    data-sfisempty="false"
    data-sfisemptyvisualhidden="false"
    data-sfisorphaned="false"
    data-sfname="SitefinityBreadcrumb"
    data-sftitle="Breadcrumb"
    draggable="true"
  >
    Breadcrumb is visible when you are on a particular page.
  </div>
</div>
`;

exports[`should render breadcrumb with full path to current page 1`] = `
<div>
  <div
    class=""
    data-sfhasquickeditoperation="true"
    data-sfid="c53ba795-8c6c-4b4e-a5f3-531e8f8e8122"
    data-sfiscontentwidget="true"
    data-sfisempty="false"
    data-sfisemptyvisualhidden="false"
    data-sfisorphaned="false"
    data-sfname="SitefinityBreadcrumb"
    data-sftitle="Breadcrumb"
    draggable="true"
  >
    <nav
      aria-label="Full path to the current page"
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            href="/home"
          >
            Home
          </a>
        </li>
        <li
          aria-current="page"
          class="breadcrumb-item active"
        >
          react new
        </li>
      </ol>
    </nav>
  </div>
</div>
`;

exports[`should render breadcrumb with margins 1`] = `
<div>
  <div
    class="mb-4 ms-5 me-3"
    data-sfhasquickeditoperation="true"
    data-sfid="52a11ccb-95b7-4b99-b09d-7e4ccf24668d"
    data-sfiscontentwidget="true"
    data-sfisempty="false"
    data-sfisemptyvisualhidden="false"
    data-sfisorphaned="false"
    data-sfname="SitefinityBreadcrumb"
    data-sftitle="Breadcrumb"
    draggable="true"
  >
    <nav
      aria-label="Full path to the current page"
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            href="/home"
          >
            Home
          </a>
        </li>
        <li
          aria-current="page"
          class="breadcrumb-item active"
        >
          react new
        </li>
      </ol>
    </nav>
  </div>
</div>
`;
